objects/FAQ_kav__c.object
<CustomObject>
    <label>Knowledge Article</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>Briefly describe the article. The summary is used in search results to help users find relevant articles. You can improve the accuracy of search results by including phrases that your customers use to describe this issue or topic.</inlineHelpText>
        <label>Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field is use to store category for Knowledge Article and use to show on Supplier Portal Search Page</description>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoicing</fullName>
                </value>
                <value>
                    <fullName>Ordering</fullName>
                </value>
                <value>
                    <fullName>Profile update</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>This field is use to set the priority of the knowledge article and based on this field value filter the knowledge article shown on the supplier portal search page</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Name__c</fullName>
        <label>URL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sp_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be use for differentiating between normal knowledge article record and supplier portal knowledge article record.</description>
        <label>Supplier Portal Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <label>Request Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article__c</fullName>
        <label>Knowledge Article</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Catalogue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Catalogue</label>
        <referenceTo>Service_Catalogue__c</referenceTo>
        <relationshipLabel>Knowledge Articles</relationshipLabel>
        <relationshipName>Knowledge_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Validated</fullName>
                    <default>true</default>
                    <label>Not Validated</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Request_URL__c</fullName>
        <inlineHelpText>Enter the full URL for the Remedyforce Service Request</inlineHelpText>
        <label>Service Request URL</label>
        <type>Url</type>
    </fields>
</CustomObject>